Detail page fix on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -481,6 +481,7 @@ select {
     bottom: 0;
     left: 0;
     right: 0;
+    transform: none;
     width: auto;
     margin: 0 12px 12px;
   }
